--- a/index.html
+++ b/index.html
@@ -82,22 +82,21 @@
 
   <div class="app-wrapper">
     <div class="alert-intro">
-      👋 Welcome to the <strong>Service Request Portal</strong> — helping you get sorted with speed and sparkle!
+      Welcome to the <strong>Service Request Portal</strong> — helping you get sorted with speed and sparkle!
     </div>
 
-    <h2 class="text-center mb-4">📝 Submit Your Request</h2>
+    <h2 class="text-center mb-4">Submit Your Request</h2>
 
     <form id="request-form" class="mb-4">
       <input name="name" class="form-control mb-2" placeholder="Your name" required />
       <input name="email" type="email" class="form-control mb-2" placeholder="Your email" required />
       <input name="phone" type="tel" class="form-control mb-2" placeholder="Contact number" required />
       <textarea name="description" class="form-control mb-3" placeholder="Describe your issue" required></textarea>
-      <button type="submit" class="btn btn-submit w-100">🚀 Submit Request</button>
+      <button type="submit" class="btn btn-submit w-100">Submit Request</button>
     </form>
 
     <hr />
-
-    <h4 class="mb-3">📋 Submitted Requests</h4>
+    <h4 class="mb-3">Submitted Requests</h4>
     <div id="request-list" class="mt-2"></div>
   </div>
 
@@ -128,7 +127,7 @@
     function generateRequestHTML(id, name, email, phone, description) {
       return `
         <strong>${name}</strong> (${email})<br>
-        📞 ${phone}<br>
+        Phone: ${phone}<br>
         <p>${description}</p>
         <label>Status:</label>
         <select class="form-select form-select-sm w-auto d-inline-block mb-2" onchange="handleStatus(${id}, this)">
@@ -136,7 +135,7 @@
           <option value="In Progress">In Progress</option>
           <option value="Resolved">Resolved</option>
         </select>
-        <button class="btn btn-sm btn-delete float-end" onclick="deleteRequest(${id})">❌ Delete</button>
+        <button class="btn btn-sm btn-delete float-end" onclick="deleteRequest(${id})">Delete</button>
         <form onsubmit="submitResponse(${id}); return false;" class="mt-3">
           <label>Provider Response:</label>
           <textarea class="form-control mb-2" id="response-input-${id}" rows="2" placeholder="Type your response here..."></textarea>
@@ -160,8 +159,8 @@
       const responseBox = document.getElementById(`response-box-${id}`);
       const text = input.value.trim();
       if (text) {
-        const greeting = "🎯 Thanks for reaching out! ";
-        responseBox.textContent = `🗨️ ${greeting}${text}`;
+        const greeting = "Thank you! ";
+        responseBox.textContent = `${greeting}${text}`;
         responseBox.classList.remove('d-none');
         input.value = '';
       }
