--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,151 +21,157 @@
       background-color: #ffffffee;
       backdrop-filter: blur(6px);
       border-radius: 20px;
-      max-width: 850px;
-      width: 100%;
+      width: 95%;
+      max-width: 950px;
       padding: 2rem;
-      box-shadow: 0 10px 32px rgba(0, 0, 0, 0.2);
+      box-shadow: 0 10px 32px rgba(0, 0, 0, 0.25);
       animation: fadeIn 0.6s ease-out;
     }
     @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      from { opacity: 0; transform: translateY(30px);}
+      to { opacity: 1; transform: translateY(0);}
     }
-    h2, h4 {
-      color: #0077cc;
-    }
-    .form-control, textarea, select {
-      border-radius: 0.5rem;
-    }
+    h2, h4 { color: #0077cc; }
+    .form-control, select, textarea { border-radius: .6rem; }
     .request-box {
-      background: #f9f9ff;
-      border: 1px solid #d0e2ff;
-      border-radius: 12px;
+      background: #f4f8ff;
+      border: 1px solid #a9ccff;
+      border-radius: 18px;
       padding: 1rem;
-      margin-bottom: 1.5rem;
-    }
-    .response-section {
-      background-color: #e9f7ef;
-      border-left: 4px solid #28a745;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      border-radius: 8px;
-    }
-    .btn-delete {
-      background-color: crimson;
-      color: white;
+      margin-bottom: 1.2rem;
     }
     .btn-submit {
       background-color: #0077cc;
-      color: white;
+      color: #fff;
+      font-size: 1.1rem;
+      border-radius: .6rem;
+      transition: .3s;
     }
-    .alert-intro {
-      font-size: 0.95rem;
-      background-color: #eaf4ff;
-      border-left: 4px solid #339af0;
-      padding: 0.75rem;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-      animation: pulse 2s infinite;
+    .btn-submit:hover {
+      background-color: #005fa3;
+      transform: scale(1.05);
     }
-    @keyframes pulse {
-      0% { opacity: 1; }
-      50% { opacity: 0.8; }
-      100% { opacity: 1; }
+    .btn-delete {
+      background: #ff4e4e;
+      color: #fff;
+      border-radius: .5rem;
+    }
+    .response-section {
+      background: #e7fbe7;
+      border-left: 4px solid #28a745;
+      padding: .75rem;
+      margin-top: .5rem;
+      border-radius: .5rem;
+    }
+    table {
+      background: #ffffffb0;
+      border-radius: 10px;
+      overflow: hidden;
     }
   </style>
 </head>
+
 <body>
+
   <audio id="greetingSound">
     <source src="https://assets.mixkit.co/sfx/preview/mixkit-achievement-bell-600.mp3" type="audio/mp3">
-    Your browser does not support the audio element.
   </audio>
 
   <div class="app-wrapper">
-    <div class="alert-intro">
-      Welcome to the <strong>Service Request Portal</strong> — helping you get sorted with speed and sparkle!
-    </div>
 
-    <h2 class="text-center mb-4">Submit Your Request</h2>
+    <h2 class="text-center mb-4">Service Request Portal</h2>
 
+    <!-- Service Request Form -->
     <form id="request-form" class="mb-4">
-      <input name="name" class="form-control mb-2" placeholder="Your name" required />
-      <input name="email" type="email" class="form-control mb-2" placeholder="Your email" required />
-      <input name="phone" type="tel" class="form-control mb-2" placeholder="Contact number" required />
+      <input name="name" class="form-control mb-2" placeholder="Full Name" required />
+      <input name="email" type="email" class="form-control mb-2" placeholder="Email Address" required />
+      <input name="phone" type="tel" class="form-control mb-2" placeholder="Contact Number" required />
+
+      <!-- Service Dropdown -->
+      <select name="service" class="form-control mb-2" required>
+        <option value="">-- Select Service --</option>
+        <option>Printer Repair</option>
+        <option>Software Installation</option>
+        <option>Network Troubleshooting</option>
+        <option>Website Design</option>
+        <option>Computer Setup</option>
+        <option>Data Backup & Recovery</option>
+      </select>
+
       <textarea name="description" class="form-control mb-3" placeholder="Describe your issue" required></textarea>
       <button type="submit" class="btn btn-submit w-100">Submit Request</button>
     </form>
 
+    <!-- User Registration Table -->
+    <h4>User Registration List</h4>
+    <table class="table table-bordered table-striped mb-4" id="user-table">
+      <thead class="table-primary">
+        <tr>
+          <th>#</th>
+          <th>Name</th>
+          <th>Service</th>
+          <th>Phone</th>
+        </tr>
+      </thead>
+      <tbody></tbody>
+    </table>
+
     <hr />
     <h4 class="mb-3">Submitted Requests</h4>
-    <div id="request-list" class="mt-2"></div>
+    <div id="request-list"></div>
+
   </div>
 
-  <script>
-    const form = document.getElementById('request-form');
-    const list = document.getElementById('request-list');
-    const greetingSound = document.getElementById('greetingSound');
-    let idCounter = 1;
+<script>
+  const form = document.getElementById("request-form");
+  const table = document.querySelector("#user-table tbody");
+  const list = document.getElementById("request-list");
+  const greetingSound = document.getElementById("greetingSound");
+  let idCounter = 1;
 
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const name = form.name.value.trim();
-      const email = form.email.value.trim();
-      const phone = form.phone.value.trim();
-      const description = form.description.value.trim();
-      if (!name || !email || !phone || !description) return;
+  form.addEventListener("submit", function(e) {
+    e.preventDefault();
+    const name = form.name.value.trim();
+    const email = form.email.value.trim();
+    const phone = form.phone.value.trim();
+    const service = form.service.value;
+    const description = form.description.value.trim();
+    if (!name || !email || !phone || !service || !description) return;
 
-      const div = document.createElement('div');
-      div.className = 'request-box';
-      div.setAttribute('data-id', idCounter);
-      div.innerHTML = generateRequestHTML(idCounter, name, email, phone, description);
-      list.appendChild(div);
-      form.reset();
-      greetingSound.play();
-      idCounter++;
-    });
+    // Add to Request Cards
+    const box = document.createElement("div");
+    box.className = "request-box";
+    box.dataset.id = idCounter;
+    box.innerHTML = requestHTML(idCounter, name, email, phone, service, description);
+    list.appendChild(box);
 
-    function generateRequestHTML(id, name, email, phone, description) {
-      return `
-        <strong>${name}</strong> (${email})<br>
-        Phone: ${phone}<br>
-        <p>${description}</p>
-        <label>Status:</label>
-        <select class="form-select form-select-sm w-auto d-inline-block mb-2" onchange="handleStatus(${id}, this)">
-          <option value="Pending">Pending</option>
-          <option value="In Progress">In Progress</option>
-          <option value="Resolved">Resolved</option>
-        </select>
-        <button class="btn btn-sm btn-delete float-end" onclick="deleteRequest(${id})">Delete</button>
-        <form onsubmit="submitResponse(${id}); return false;" class="mt-3">
-          <label>Provider Response:</label>
-          <textarea class="form-control mb-2" id="response-input-${id}" rows="2" placeholder="Type your response here..."></textarea>
-          <button type="submit" class="btn btn-outline-success btn-sm">Send Response</button>
-        </form>
-        <div id="response-box-${id}" class="response-section d-none"></div>
-      `;
-    }
+    // Add to Table
+    const row = document.createElement("tr");
+    row.innerHTML = `<td>${idCounter}</td><td>${name}</td><td>${service}</td><td>${phone}</td>`;
+    table.appendChild(row);
 
-    function deleteRequest(id) {
-      const box = document.querySelector(`[data-id="${id}"]`);
-      if (box) box.remove();
-    }
+    idCounter++;
+    greetingSound.play();
+    form.reset();
+  });
 
-    function handleStatus(id, select) {
-      console.log(`Status for request ${id} updated to: ${select.value}`);
-    }
+  function requestHTML(id, name, email, phone, service, description) {
+    return `
+      <strong>${name}</strong> (${email})<br>
+      Service: <strong>${service}</strong><br>
+      Phone: ${phone}<br>
+      <p>${description}</p>
+      <label>Status:</label>
+      <select class="form-select form-select-sm w-auto d-inline-block mb-2"
+              onchange="console.log('Status:', this.value)">
+        <option>Pending</option>
+        <option>In Progress</option>
+        <option>Resolved</option>
+      </select>
+      <button class="btn btn-sm btn-delete float-end" onclick="this.parentElement.remove()">Delete</button>
+    `;
+  }
+</script>
 
-    function submitResponse(id) {
-      const input = document.getElementById(`response-input-${id}`);
-      const responseBox = document.getElementById(`response-box-${id}`);
-      const text = input.value.trim();
-      if (text) {
-        const greeting = "Thank you! ";
-        responseBox.textContent = `${greeting}${text}`;
-        responseBox.classList.remove('d-none');
-        input.value = '';
-      }
-    }
-  </script>
 </body>
 </html>
